// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render completed challenge correctly 1`] = `
<View>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={null}
  />
  <ChallengeDetailHeader
    canEditChallenges={true}
    challenge={
      Object {
        "accepted_community_challenges": Array [
          Object {
            "id": "a1",
            "person": Object {
              "id": "1111",
            },
          },
        ],
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</View>
`;

exports[`should render joined challenge correctly 1`] = `
<View>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="I DID IT"
        type="transparent"
      />
    }
  />
  <ChallengeDetailHeader
    canEditChallenges={true}
    challenge={
      Object {
        "accepted_community_challenges": Array [
          Object {
            "id": "a1",
            "person": Object {
              "id": "1111",
            },
          },
        ],
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</View>
`;

exports[`should render tabs correctly 1`] = `
Array [
  Object {
    "component": [Function],
    "name": "Joined",
    "navigationAction": "nav/CHALLENGE_JOINED",
  },
  Object {
    "component": [Function],
    "name": "Completed",
    "navigationAction": "nav/CHALLENGE_COMPLETED",
  },
]
`;

exports[`should render unjoined challenge correctly 1`] = `
<View>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="JOIN"
        type="transparent"
      />
    }
  />
  <ChallengeDetailHeader
    canEditChallenges={true}
    challenge={
      Object {
        "accepted_community_challenges": Array [
          Object {
            "id": "a1",
            "person": Object {
              "id": "1111",
            },
          },
        ],
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</View>
`;

exports[`should render without edit correctly 1`] = `
<View>
  <StatusBar
    animated={true}
    backgroundColor="#006789"
    barStyle="dark-content"
    showHideTransition="fade"
  />
  <Header
    left={
      <IconButton
        name="deleteIcon"
        onPress={[Function]}
        style={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        type="MissionHub"
      />
    }
    right={
      <Button
        buttonTextStyle={
          Object {
            "color": "#007398",
            "fontSize": 14,
            "fontWeight": "400",
          }
        }
        onPress={[Function]}
        style={
          Object {
            "paddingRight": 10,
          }
        }
        text="JOIN"
        type="transparent"
      />
    }
  />
  <ChallengeDetailHeader
    canEditChallenges={false}
    challenge={
      Object {
        "accepted_community_challenges": Array [
          Object {
            "id": "a1",
            "person": Object {
              "id": "1111",
            },
          },
        ],
        "end_date": "2018-09-22",
        "id": "1",
        "isPast": false,
        "title": "Read \\"There and Back Again\\"",
      }
    }
    onEdit={[Function]}
  />
</View>
`;
